TO DO
	- IA
		+ Evaluation of gamesate
			- 13-03-21 Identifying win-loose states
			- 14-03-21 Identifying ties
			- Identifying threats (3 in a row)
			- Identifying blocks (blocking 3s and 4s in a row)
			- Control of the Zugzwang
		+ Numeric score of gamestate
		+ Minmax algorithm
		+ Alpha-beta pruning
		
	
DONE
	-Basic Mechanics
		+ 3-03-21 Concurrency in order to be able to interact in real time with the game
		+ 9-03-21 Error on setText (was writing an INT instead of String)
		+ 9-03-21 Detect win states
		+ 10-03-21 Better turns (IA vs player)
		+ 10-03-21 Random assignment of teams
		+ 13-03-21 Some sort of DEV mode